--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-the-complete-guide",
   "version": "0.1.0",
-  "homepage": "https://Rejnszu.github.io/Tic-Tac-Toe",
+  "homepage": "https://Rejnszu.github.io/Tic-Tac-Toe-AI",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
